add swagger api for markets
