# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Category\MarketController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
@@ -24,7 +25,7 @@ use App\Http\Controllers\User\RoleController;
 Route::post('/login', [AuthController::class, 'login'])->name('login');
 
 Route::middleware(['auth:sanctum', 'token.expiration'])->group(function () {
-    
+
     Route::get('/user', function (Request $request) {
         return new UserResource($request->user());
     });
@@ -37,20 +38,29 @@ Route::middleware(['auth:sanctum', 'token.expiration'])->group(function () {
     });
 
     Route::prefix('users')->group(function () {
-        Route::get('/', [AccountController::class, 'index']); 
-        Route::post('/', [AccountController::class, 'store']); 
-        Route::get('/{id}', [AccountController::class, 'show']); 
-        Route::put('/{id}', [AccountController::class, 'update']); 
-        Route::delete('/{id}', [AccountController::class, 'destroy']); 
+        Route::get('/', [AccountController::class, 'index']);
+        Route::post('/', [AccountController::class, 'store']);
+        Route::get('/{id}', [AccountController::class, 'show']);
+        Route::put('/{id}', [AccountController::class, 'update']);
+        Route::delete('/{id}', [AccountController::class, 'destroy']);
     });
 
     Route::prefix('roles')->group(function () {
         Route::get('/', [RoleController::class, 'index']);
-        Route::post('/', [RoleController::class, 'store']); 
-        Route::get('/{id}', [RoleController::class, 'show']); 
-        Route::put('/{id}', [RoleController::class, 'update']); 
-        Route::delete('/{id}', [RoleController::class, 'destroy']); 
+        Route::post('/', [RoleController::class, 'store']);
+        Route::get('/{id}', [RoleController::class, 'show']);
+        Route::put('/{id}', [RoleController::class, 'update']);
+        Route::delete('/{id}', [RoleController::class, 'destroy']);
     });
+
+    Route::prefix('markets')->group(function () {
+        Route::get('/', [MarketController::class, 'index']);
+        Route::post('/', [MarketController::class, 'store']);
+        Route::get('/{id}', [MarketController::class, 'show']);
+        Route::put('/{id}', [MarketController::class, 'update']);
+        Route::delete('/{id}', [MarketController::class, 'destroy']);
+    });
+
 
     Route::post('/logout', [AuthController::class, 'logout']);
 });
